<resources>
    <string name="app_name">MyTinder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Country: %s</string>
    <string name="gender">Gender:  %s</string>
    <string name="city">City: %s</string>
    <string name="age">Age: %s</string>
</resources>