<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonFragment">


    <ImageView
        android:id="@+id/person_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/person_picture"
        app:layout_constraintStart_toStartOf="@+id/person_picture"
        app:layout_constraintTop_toBottomOf="@+id/person_picture" />

    <TextView
        android:id="@+id/person_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_name" />

    <TextView
        android:id="@+id/person_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_name" />

    <TextView
        android:id="@+id/person_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gender"
        app:layout_constraintEnd_toEndOf="@+id/person_country"
        app:layout_constraintStart_toStartOf="@+id/person_country"
        app:layout_constraintTop_toBottomOf="@+id/person_country" />

    <TextView
        android:id="@+id/persone_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/age"
        app:layout_constraintEnd_toEndOf="@+id/person_city"
        app:layout_constraintStart_toStartOf="@+id/person_city"
        app:layout_constraintTop_toBottomOf="@+id/person_city" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="About me:"
        app:layout_constraintStart_toStartOf="@+id/person_gender"
        app:layout_constraintTop_toBottomOf="@+id/person_gender" />

    <TextView
        android:id="@+id/person_about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/about"
        app:layout_constraintTop_toBottomOf="@+id/about" />
</androidx.constraintlayout.widget.ConstraintLayout>